--- a/index.html
+++ b/index.html
@@ -19,10 +19,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     
-    <!-- style sheets and Google fonts -->
+    <!-- style sheets -->
     <link rel="stylesheet" href="css/app.min.css" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
     
     <!-- theme and meta data -->
     <link rel="manifest" href="manifest.json" />
