implemented dropdown menus for navigation bar

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
     
     <nav id="nav">
-        <ul>
+        <ul class="main">
             <li>
                 <a href="#" title="Home" class="home-btn"><svg viewBox="0 0 32 32"><path d="M32 18.451l-16-12.42-16 12.42v-5.064l16-12.42 16 12.42zM28 18v12h-8v-8h-8v8h-8v-12l12-9z"></path></svg></a>
             </li>
@@ -67,6 +67,58 @@
                     <span lang="de">Initiativen</span>
                     <span lang="en">Initiatives</span>
                 </a>
+                <ul class="dropdown depth-1">
+                    <li>
+                        <a href="#">Test Link</a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span lang="de">Längerer Test Link</span>
+                            <span lang="en">Longer Test Link</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span lang="de">Sehr Sehr Super-Duper Langer Test Link</span>
+                            <span lang="en">Very Very Super-Duper Long Test Link</span>
+                        </a>
+                        <ul class="dropdown depth-2">
+                            <li>
+                                <a href="#">Test Link</a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span lang="de">Längerer Test Link</span>
+                                    <span lang="en">Longer Test Link</span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#">
+                                    <span lang="de">Sehr Sehr Super-Duper Langer Test Link</span>
+                                    <span lang="en">Very Very Super-Duper Long Test Link</span>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span lang="de">Weiterer Link 1</span>
+                            <span lang="en">Another Link 1</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span lang="de">Weiterer Link 2</span>
+                            <span lang="en">Another Link 2</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <span lang="de">Weiterer Link 3</span>
+                            <span lang="en">Another Link 3</span>
+                        </a>
+                    </li>
+                </ul>
             </li>
             <li>
                 <a href="#">
