added arrow elements that indicate items which open dropdown menus

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
                 <a href="#">
                     <span lang="de">Initiativen</span>
                     <span lang="en">Initiatives</span>
+                    <span class="dropdown-indicator"></span>
                 </a>
                 <ul class="dropdown depth-1">
                     <li>
@@ -81,6 +82,7 @@
                         <a href="#">
                             <span lang="de">Sehr Sehr Super-Duper Langer Test Link</span>
                             <span lang="en">Very Very Super-Duper Long Test Link</span>
+                            <span class="dropdown-indicator"></span>
                         </a>
                         <ul class="dropdown depth-2">
                             <li>
