added hamburger button to open mobile navigation menu

--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
                 <li><button class="lang-select-btn" set-lang="de" tabindex="-1">Deutsch</button></li>
                 <li><button class="lang-select-btn" set-lang="en">English</button></li>
             </ul>
+            
+            <button id="mobile-hamburger-btn">
+                <span class="top"></span>
+                <span class="middle"></span>
+                <span class="bottom"></span>
+            </button>
         </div>
         
         <br />
