added basic mobile navigation

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     </header>
     
     <nav id="nav">
+        <div class="overlay"></div>
         <ul class="main">
             <li>
                 <a href="#" title="Home" class="home-btn"><svg viewBox="0 0 32 32"><path d="M32 18.451l-16-12.42-16 12.42v-5.064l16-12.42 16 12.42zM28 18v12h-8v-8h-8v8h-8v-12l12-9z"></path></svg></a>
