dropdown menus are now hidden until opened in the mobile navigation

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
                     <span lang="en">Initiatives</span>
                     <span class="dropdown-indicator"></span>
                 </a>
+                <button class="mobile-dropdown-opener"></button>
                 <ul class="dropdown depth-1">
                     <li>
                         <a href="#">Test Link</a>
@@ -98,6 +99,7 @@
                             <span lang="en">Very Very Super-Duper Long Test Link</span>
                             <span class="dropdown-indicator"></span>
                         </a>
+                        <button class="mobile-dropdown-opener"></button>
                         <ul class="dropdown depth-2">
                             <li>
                                 <a href="#">Test Link</a>
