--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <!-- preload fonts -->
     <link rel="preload" href="font/noto-sans-normal.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="font/noto-sans-bold.woff2" as="font" type="font/woff2" crossorigin />
+    <link rel="preload" href="font/iconmonstr-font.woff2" as="font" type="font/woff2" crossorigin />
     
     <!-- style sheets -->
     <link rel="stylesheet" href="css/app.min.css" type="text/css" />
@@ -121,7 +122,7 @@
         <div class="overlay"></div>
         <ul class="main">
             <li>
-                <a href="#" title="Home" class="home-btn"><svg viewBox="0 0 32 32"><path d="M32 18.451l-16-12.42-16 12.42v-5.064l16-12.42 16 12.42zM28 18v12h-8v-8h-8v8h-8v-12l12-9z"></path></svg></a>
+                <a href="#" title="Home" class="home-btn"><i class="icon icon-iconmonstr-home-1"></i></a>
             </li>
             <li>
                 <a href="#">
@@ -299,13 +300,13 @@
                 <ul class="social-media">
                     
                     <li>
-                        <a href="#" title="Facebook"><svg viewBox="0 0 32 32"><path d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h13v-14h-4v-4h4v-2c0-3.306 2.694-6 6-6h4v4h-4c-1.1 0-2 0.9-2 2v2h6l-1 4h-5v14h9c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3z"></path></svg></a>
+                        <a href="#" title="Facebook"><i class="icon icon-iconmonstr-facebook-3"></i></a>
                     </li>
                     <li>
-                        <a href="#" title="Instagram"><svg viewBox="0 0 32 32"><path d="M16 2.881c4.275 0 4.781 0.019 6.462 0.094 1.563 0.069 2.406 0.331 2.969 0.55 0.744 0.288 1.281 0.638 1.837 1.194 0.563 0.563 0.906 1.094 1.2 1.838 0.219 0.563 0.481 1.412 0.55 2.969 0.075 1.688 0.094 2.194 0.094 6.463s-0.019 4.781-0.094 6.463c-0.069 1.563-0.331 2.406-0.55 2.969-0.288 0.744-0.637 1.281-1.194 1.837-0.563 0.563-1.094 0.906-1.837 1.2-0.563 0.219-1.413 0.481-2.969 0.55-1.688 0.075-2.194 0.094-6.463 0.094s-4.781-0.019-6.463-0.094c-1.563-0.069-2.406-0.331-2.969-0.55-0.744-0.288-1.281-0.637-1.838-1.194-0.563-0.563-0.906-1.094-1.2-1.837-0.219-0.563-0.481-1.413-0.55-2.969-0.075-1.688-0.094-2.194-0.094-6.463s0.019-4.781 0.094-6.463c0.069-1.563 0.331-2.406 0.55-2.969 0.288-0.744 0.638-1.281 1.194-1.838 0.563-0.563 1.094-0.906 1.838-1.2 0.563-0.219 1.412-0.481 2.969-0.55 1.681-0.075 2.188-0.094 6.463-0.094zM16 0c-4.344 0-4.887 0.019-6.594 0.094-1.7 0.075-2.869 0.35-3.881 0.744-1.056 0.412-1.95 0.956-2.837 1.85-0.894 0.888-1.438 1.781-1.85 2.831-0.394 1.019-0.669 2.181-0.744 3.881-0.075 1.713-0.094 2.256-0.094 6.6s0.019 4.887 0.094 6.594c0.075 1.7 0.35 2.869 0.744 3.881 0.413 1.056 0.956 1.95 1.85 2.837 0.887 0.887 1.781 1.438 2.831 1.844 1.019 0.394 2.181 0.669 3.881 0.744 1.706 0.075 2.25 0.094 6.594 0.094s4.888-0.019 6.594-0.094c1.7-0.075 2.869-0.35 3.881-0.744 1.050-0.406 1.944-0.956 2.831-1.844s1.438-1.781 1.844-2.831c0.394-1.019 0.669-2.181 0.744-3.881 0.075-1.706 0.094-2.25 0.094-6.594s-0.019-4.887-0.094-6.594c-0.075-1.7-0.35-2.869-0.744-3.881-0.394-1.063-0.938-1.956-1.831-2.844-0.887-0.887-1.781-1.438-2.831-1.844-1.019-0.394-2.181-0.669-3.881-0.744-1.712-0.081-2.256-0.1-6.6-0.1v0z"></path><path d="M16 7.781c-4.537 0-8.219 3.681-8.219 8.219s3.681 8.219 8.219 8.219 8.219-3.681 8.219-8.219c0-4.537-3.681-8.219-8.219-8.219zM16 21.331c-2.944 0-5.331-2.387-5.331-5.331s2.387-5.331 5.331-5.331c2.944 0 5.331 2.387 5.331 5.331s-2.387 5.331-5.331 5.331z"></path><path d="M26.462 7.456c0 1.060-0.859 1.919-1.919 1.919s-1.919-0.859-1.919-1.919c0-1.060 0.859-1.919 1.919-1.919s1.919 0.859 1.919 1.919z"></path></svg></a>
+                        <a href="#" title="Instagram"><i class="icon icon-iconmonstr-instagram-1"></i></a>
                     </li>
                     <li>
-                        <a href="#" title="Vimeo"><svg viewBox="0 0 32 32"><path d="M29 0h-26c-1.65 0-3 1.35-3 3v26c0 1.65 1.35 3 3 3h26c1.65 0 3-1.35 3-3v-26c0-1.65-1.35-3-3-3zM26.925 10.625c-0.1 2.25-1.675 5.331-4.719 9.244-3.144 4.087-5.806 6.131-7.981 6.131-1.35 0-2.488-1.244-3.419-3.731-0.625-2.281-1.244-4.563-1.869-6.844-0.688-2.488-1.431-3.731-2.225-3.731-0.175 0-0.781 0.363-1.813 1.088l-1.087-1.4c1.144-1 2.269-2.006 3.375-3.006 1.525-1.313 2.662-2.006 3.425-2.075 1.8-0.175 2.906 1.056 3.325 3.687 0.45 2.844 0.762 4.606 0.938 5.3 0.519 2.356 1.088 3.531 1.712 3.531 0.481 0 1.212-0.762 2.181-2.294s1.488-2.694 1.556-3.494c0.137-1.319-0.381-1.981-1.556-1.981-0.556 0-1.125 0.125-1.712 0.381 1.137-3.719 3.306-5.531 6.512-5.425 2.375 0.069 3.494 1.606 3.356 4.619z"></path></svg></a>
+                        <a href="#" title="Vimeo"><i class="icon icon-iconmonstr-vimeo-3"></i></a>
                     </li>
                 </ul>
 
