fixed missing language-selection buttons on mobile version

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             
             <div class="right-menu">
 
-                <ul class="language-selection">
+                <ul id="language-selection">
                     <li><button class="lang-select-btn" set-lang="de" tabindex="-1">Deutsch</button></li>
                     <li><button class="lang-select-btn" set-lang="en">English</button></li>
                 </ul>
@@ -211,6 +211,14 @@
                     <span lang="de">Dienste</span>
                     <span lang="en">Service</span>
                 </a>
+            </li>
+            <li id="mobile-language-selection">
+                <span lang="de">Sprache:</span>
+                <span lang="en">Language:</span>
+                <ul>
+                    <li><button class="lang-select-btn" set-lang="de" tabindex="-1">Deutsch</button></li>
+                    <li><button class="lang-select-btn" set-lang="en">English</button></li>
+                </ul>
             </li>
         </ul>
     </nav>
