added RSS social button

--- a/index.html
+++ b/index.html
@@ -359,6 +359,9 @@
                     <li>
                         <a href="#" title="Vimeo"><i class="icon icon-iconmonstr-vimeo-3"></i></a>
                     </li>
+                    <li>
+                        <a href="#" title="RSS"><i class="icon icon-iconmonstr-rss-feed-3"></i></a>
+                    </li>
                 </ul>
 
             </div>
