--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             </div>
         </div>
         
-        <div class="inner">
+        <div class="background">
 
             <section class="links">
 
@@ -411,7 +411,6 @@
                     </li>
                 </ul>
             </section>
-
         </div>
         
     </footer>
