--- a/index.html
+++ b/index.html
@@ -299,8 +299,8 @@
             <section class="spoiler-menu">
                 
                 <div class="spoiler-headline">
-                    <span lang="de">Eine Überschrift</span>
-                    <span lang="en">An headline</span>
+                    <span lang="de">Überschrift</span>
+                    <span lang="en">Headline</span>
                 </div>
             
                 <button class="open-spoiler" data-open-hidden-section="hidden1">
@@ -374,8 +374,8 @@
 
                 <ul class="list">
                     <li class="headline">
-                        <span lang="de">Ein Header</span>
-                        <span lang="en">Some Header</span>
+                        <span lang="de">Überschrift</span>
+                        <span lang="en">Header</span>
                     </li>
                     <li class="link">
                         <a href="#">Test Link</a>
@@ -414,7 +414,7 @@
 
                 <ul class="list">
                     <li class="headline">
-                        <span lang="de">Weiterer Header</span>
+                        <span lang="de">Weitere Überschrift</span>
                         <span lang="en">Another Header</span>
                     </li>
                     <li class="link">
