--- a/index.html
+++ b/index.html
@@ -100,13 +100,19 @@
             <a href="#" class="uni-change-btn active" tabindex="-1">
                 <span class="main">BUW</span>
                 <br />
-                <span class="sub">Bauhaus Univer-<br />sität Weimar</span>
+                <span class="sub">
+                    <span lang="de">Bauhaus Uni-<br />versität Weimar</span>
+                    <span lang="en">Bauhaus Uni-<br />versity Weimar</span>
+                </span>
             </a>
             
             <a href="#" class="uni-change-btn">
                 <span class="main">HfM</span>
                 <br />
-                <span class="sub">Hochschule<br />für Musik</span>
+                <span class="sub">
+                    <span lang="de">Hochschule<br />für Musik</span>
+                    <span lang="en">University<br />of Music</span>
+                </span>
             </a>
             
             <div class="right-menu">
@@ -234,14 +240,20 @@
                         <a href="#" class="uni-change-btn active" tabindex="-1">
                             <span class="main">BUW</span>
                             <br />
-                            <span class="sub">Bauhaus Univer-<br />sität Weimar</span>
+                            <span class="sub">
+                                <span lang="de">Bauhaus Uni-<br />versität Weimar</span>
+                                <span lang="en">Bauhaus Uni-<br />versity Weimar</span>
+                            </span>
                         </a>
                     </li>
                     <li>
                         <a href="#" class="uni-change-btn">
                             <span class="main">HfM</span>
                             <br />
-                            <span class="sub">Hochschule<br />für Musik</span>
+                            <span class="sub">
+                                <span lang="de">Hochschule<br />für Musik</span>
+                                <span lang="en">University<br />of Music</span>
+                            </span>
                         </a>
                     </li>
                 </ul>
